[package]
name = "scoped-thread-pool-std"
version = "0.1.0"
edition = "2024"
description = "A thread pool with scope and join handle support"
homepage = "https://github.com/doliawu/thread-pool-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]

[dev-dependencies]
criterion = "*"

[[bench]]
name = "task_execution"
harness = false